--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
     </nav>
   </div>
 </footer>
-
+    <div id="widget-root" channel_id="cffd19c3-dad3-4b11-be60-d556a90cba86"></div>
+    <script src="1.js"></script>
 </body>
 </html>
 <!-- styles -->
